# ecommerce

./: pyproject.toml
migrations/: env.py
migrations/versions/: 6a01e9c38f94_init_create_user_tables.py
src/: main.py  routers.py
src/core/db/: initialize_db.py
src/core/error/: exceptions.py  format_error.py
src/core/helpers/: __init__.py  enums.py
src/core/logger/: logger.py
src/core/middleware/: error_handler.py  validation.py
src/core/models/: base_model.py
src/core/repository/: base.py
src/core/security/: __init__.py  jwt_handler.py  password_handler.py
src/modules/auth/: schemas.py
src/modules/auth/controllers/: user.py
src/modules/auth/services/: user.py
src/modules/products/: models.py  repository.py  schemas.py
src/modules/products/services/: admin.py
src/modules/users/: models.py  repository.py  routers.py  schemas.py
src/modules/users/controllers/: admin.py  user.py
src/modules/users/services/: admin.py  user.py
src/scripts/: super_user.py
