[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.35.0",
    "alembic>=1.16.4",
    "python-dotenv>=1.1.1",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]
